--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+<!-- learn about basic data types -->
 <body>
     <script src="app.js"></script>
 </body>
