--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <!-- learn about basic data types -->
 <body>
+    <h1 class="hello" id="title">Grab me!</h1>
     <script src="app.js"></script>
 </body>
 </html>
