--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <!-- learn about basic data types -->
 <body>
-    <h1 class="hello" id="title">Grab me!</h1>
+    <div class="hello">
+        <h1>Grab me 1</h1>
+    </div>  
+    <div class="hello">
+        <h1>Grab me 2</h1>
+    </div>
+    <div class="hello">
+        <h1>Grab me 3</h1>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
