--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
 <!-- learn about basic data types -->
 <body>
     <div class="hello">
-        <h1>Grab me 1</h1>
+        <h1>Click me</h1>
     </div>  
-    <div class="hello">
-        <h1>Grab me 2</h1>
-    </div>
-    <div class="hello">
-        <h1>Grab me 3</h1>
-    </div>
     <script src="app.js"></script>
 </body>
 </html>
