--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <!-- learn about basic data types -->
 <body>
-    <div class="hello">
-        <h1>Click me</h1>
-    </div>  
+    <div class="login-form">
+        <input type="text" placeholder="What is your name?"/>
+        <button>Log In</button>
+    </div> 
     <script src="app.js"></script>
 </body>
 </html>
