--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 <!-- learn about basic data types -->
 <body>
-    <div class="login-form">
-        <input type="text" placeholder="What is your name?"/>
+    <form class="login-form">
+        <input 
+            required 
+            maxlength="15" 
+            type="text" 
+            placeholder="What is your name?"/>
         <button>Log In</button>
-    </div> 
+        <input type="submit" value="Log In"/>
+    </form> 
     <script src="app.js"></script>
 </body>
 </html>
