--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             placeholder="What is your name?"/>
         <input type="submit" value="Log In"/>
     </form> 
+    <a href="https://nomadcoders.co">Go ro courses</a>
     <script src="app.js"></script>
 </body>
 </html>
