--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <!-- learn about basic data types -->
 <body>
-    <form class="login-form">
+    <form class="login-form ">
         <input 
             required 
             maxlength="15" 
@@ -17,7 +17,7 @@
             placeholder="What is your name?"/>
         <input type="submit" value="Log In"/>
     </form> 
-    <a href="https://nomadcoders.co">Go ro courses</a>
+    <h1 class="greeting hidden"></h1>
     <script src="app.js"></script>
 </body>
 </html>
