--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <!-- learn about basic data types -->
 <body>
-    <form class="login-form ">
+    <form class="login-form hidden">
         <input 
             required 
             maxlength="15" 
