--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <!-- learn about basic data types -->
 <body>
+    <h2 id="clock">00:00</h2>
     <form class="login-form hidden">
         <input 
             required 
@@ -17,8 +18,11 @@
             placeholder="What is your name?"/>
         <input type="submit" value="Log In"/>
     </form> 
-    <h2 id="clock">00:00</h2>
     <h1 class="greeting hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required/>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
         <span></span>
         <span></span>
@@ -27,5 +31,6 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html>
